--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+        <groupId>com.jcraft</groupId>
+        <artifactId>jsch</artifactId>
+        <version>0.1.53</version>
+    </dependency>
+
 
 
     </dependencies>
